# nukemichi

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/app/: __init__.py  data_store.py  data_validation.py  localization.py  main.py  routing.py  schemas.py  seed_pipeline.py  validate_data.py
apps/backend/app/data/: ikebukuro_demo_station.json
apps/backend/app/data/seeds/: ikebukuro_east_locker_seed.example.json
apps/backend/tests/: test_api.py  test_data_validation.py  test_demo_data_integrity.py  test_localization.py  test_routing.py  test_routing_and_localization.py  test_seed_pipeline.py
apps/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json
apps/frontend/src/: App.tsx  api.ts  store.ts  styles.css  types.ts
apps/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
docs/: ikebukuro-data-expansion.md  seed-pipeline.md
