[project]
name = "nukemichi-backend"
version = "0.1.0"
description = "FastAPI backend for the Nukemichi indoor navigation MVP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.116.0",
  "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
